# neuromass

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: coordination_dev.yml  coordination_main.yml  step_bump_version.yml  step_check_bump_label.yml  step_create_github_release.yml  step_lint_python.yml  step_pytest.yml
docs/: api.rst  conf.py  dev_corner.rst  index.rst  installation.rst
docs/api/: kuramoto.rst  neuromass.rst  utils.rst
examples/: kuramoto_critical_coupling.py  kuramoto_naive.py
src/neuromass/: __init__.py
src/neuromass/models/: __init__.py  base.py
src/neuromass/models/kuramoto/: __init__.py  model.py
src/neuromass/models/kuramoto/_native/: README.md  __init__.py  c_backend_wrapper.c  c_backend_wrapper.pyx  cpp_backend_wrapper.cpp  cpp_backend_wrapper.pyx  cython_backend.c  cython_backend.pyx  kuramoto_c_kernel.c  kuramoto_c_kernel.h  kuramoto_cpp_kernel.cpp  kuramoto_cpp_kernel.hpp
src/neuromass/utils/: __init__.py  lorentzian.py
tests/: test_import.py  test_kuramoto.py  test_utils_lorentzian.py  test_utils_lorentzian_quantile.py
