[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "Cython>=3.0",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "neuromass"
version = "0.1.0"
description = "Neuroscience-oriented neural mass and mean-field simulation toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = "CECILL-B"
license-files = ["LICENSE"]
authors = [
    { name = "Florian Kolbl" },
    { name = "Yannick Bornat" },
    { name = "Mehrdad Paryav" },
    { name = "Salma Taki" },
]
keywords = [
    "neuroscience",
    "neural-mass",
    "mean-field",
    "kuramoto",
    "dynamical-systems",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "ruff",
]
docs = [
    "sphinx>=7",
    "furo",
]
test = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"neuromass.models.kuramoto._native" = ["*.pyx", "*.h", "*.hpp", "*.c", "*.cpp", "README.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/neuromass/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "tests/test_import.py"
search = "assert nm.__version__ == \"{current_version}\""
replace = "assert nm.__version__ == \"{new_version}\""

[[tool.bumpversion.files]]
filename = "docs/conf.py"
search = "release = \"{current_version}\""
replace = "release = \"{new_version}\""
